Testing creating nginx conf files from templates
Somehow when trying to extract environment variables using default
container scripts - they do not work in heroku setting, so I am trying
this way instead.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,8 @@
 FROM nginx:1.21.4
 
-COPY nginx.conf.template /etc/nginx/templates/
+COPY nginx.conf /etc/nginx/templates/
 
 WORKDIR /app/
+
+
+CMD sh -c ./start.sh
