Made template explosion build time process
Made template explosion build time process instead of runtime.
Specific of Heroku is that all processes in running as non-root user and
$PORT variable is provided by Heroku and cannot be modified. Thus you
need to explode template with env vars and because of non-root thing you
need to do it in buildtime.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,8 +1,8 @@
 FROM nginx:1.21.4
 
-COPY nginx.conf /etc/nginx/templates/
+COPY nginx/ /etc/nginx/templates/
 
 WORKDIR /app/
 
 
-CMD sh -c ./start.sh
+CMD sh -c 'for f in $(find /etc/nginx/templates -name "*.conf"); do envsubst < $f > "/etc/nginx/conf.d/$(basename $f)"; done' && nginx -g 'daemon off;'
