Refactor nginx conf

--- a/nginx/templates/default.conf.template
+++ b/nginx/templates/default.conf.template
@@ -1,7 +1,7 @@
 server {
+	server_name
+		www.localhost
+		www.sorokingroup.com;
 	listen $PORT;
-
-	location / {
-		root /app/static/;
-	}
+	root /app/static/;
 }
